# DualBalanceDistricting

./: .env.example  .gitignore  CLAUDE.md  Formalism.md  README.md  _bench_articulation.py  _collect_race_partisan.py  _debug_nc_phase1.py  _gen_tables.py  _patch_results.py  _plot_figures.py  _plot_maps.py  _plot_race_partisan.py  _plot_results.py  _plot_story.py  _run_all_states.py  _run_compare_all.py  _test_block.py  _test_block_from_vtd.py  _test_optimizer.py  _verify_tarjan.py  pyproject.toml
configs/: apportion_2020.yaml  ia_vtd.yaml  ma_vtd.yaml  mn_vtd.yaml  nc_vtd.yaml  tx_vtd.yaml  wi_vtd.yaml
data/: README.md
dev/: bench_articulation.py  test_block_from_vtd.py
docs/: Formalism.md  gerrymandering-research.md  legal-standards.md  mn-poc-walkthrough.md  stuck-state-problem.md
manuscript/: README.md  main.md  main.tex  references.bib
manuscript/scripts/: gen_tables.py  patch_results.py  plot_figures.py  plot_maps.py  plot_story.py
manuscript/sections/: discussion.tex  introduction.tex  methods.tex  results.tex  (+1 more)
results/: rotation_sweep.json
scripts/: compare_state.py  fetch_enacted_mn.py  plot_mn_comparison.py  plot_mn_poc.py  plot_wi_comparison.py  prep_bdistricting.py  prep_mn_units.py  prep_state_units.py  rotation_fill_tex.py  rotation_make_table.py  rotation_sweep.py  run_all_states.py  run_compare_all.py  run_karcher_overnight.py
tests/: conftest.py  test_apportionment.py  test_cascade.py  test_cli.py  test_config.py  test_districting.py  test_geography.py  test_io.py  test_scoring.py  test_seeds.py  test_tighten.py  test_trades.py
(+17 files in other folders)
