[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dualbalance"
version = "0.0.0"
description = "A deterministic alternative to gerrymandering."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Steven Hart", email = "hart.steven@mayo.edu" }]
keywords = ["redistricting", "gerrymandering", "voronoi", "apportionment"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "geopandas>=0.14",
    "shapely>=2.0",
    "gerrychain>=0.3",
    "numpy>=1.26",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
dualbalance = "dualbalance.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dualbalance"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
